src/ScrollBox/scrollBox.css
@import "../proto/base.css";

:root
{
    --trackThickness:   5px;
}

.default
{
    overflow:   hidden;

    .content
    {

    }

    .inner
    {
        width:      100%;
        height:     100%;
        overflow:   scroll;

        &::-webkit-scrollbar
        {
            display:    none;
        }
    }

    .iconDown,
    .iconLeft,
    .iconRight,
    .iconUp
    {
        position:       absolute;
        border-radius:  50%;
        padding:        var( --spacing-1 );
        background:     var( --PC-BLUE );
        opacity:        0.4;

        &:hover,
        &:focus
        {
            opacity:    1;
        }

        svg
        {
            fill:   var( --PC-WHITE );
        }
    }

    .iconDown
    {
        bottom:     var( --spacing-1 );
        left:       calc( 50% );
        transform:  translateX( -50% );
    }

    .iconLeft
    {
        top:        calc( 50% );
        left:       var( --spacing-1 );
        transform:  translateY( -50% );
    }

    .iconRight
    {
        top:        calc( 50% );
        right:      var( --spacing-1 );
        transform:  translateY( -50% );
    }

    .iconUp
    {
        top:        var( --spacing-1 );
        left:       calc( 50% );
        transform:  translateX( -50% );
    }

    .scrollBarHorizontal
    {
        position:   absolute;
        bottom:     0;
        left:       0;
    }

    .scrollBarVertical
    {
        position:   absolute;
        top:        0;
        right:      0;
    }
}

.scroll__horizontal
{
    .inner
    {
        overflow-x:             scroll;
        overflow-y:             hidden;
        overscroll-behavior-x:  contain;
    }

}

.scroll__vertical
{
    .inner
    {
        overflow-x:             hidden;
        overflow-y:             scroll;
        overscroll-behavior-y:  contain;
    }
}

.scroll__both
{
    .scrollBarHorizontal,
    {
        width:          calc( 100% - var( --trackThickness ) );

        &:after
        {
            content:          "";
            display:          block;
            position:         absolute;
            right:            -5px;
            width:            var( --trackThickness );
            height:           var( --trackThickness );
            background-color: var( --PC-WHITE );
        }
    }
    .scrollBarVertical
    {
        height:         calc( 100% - var( --trackThickness ) );
    }

    .inner
    {
        padding-right:   var( --trackThickness );
        padding-bottom:  var( --trackThickness );
        box-sizing:      border-box;
    }
}

.overlayScrollBars
{
    .inner
    {
        padding-right:   0;
        padding-bottom:  0;
        box-sizing:      content-box;
    }
}

/* padding X */
.paddingX__S .content
{
    padding-left:   var( --spacing-1 );
    padding-right:  var( --spacing-1 );
}

.paddingX__M .content
{
    padding-left:   var( --spacing-2 );
    padding-right:  var( --spacing-2 );
}

.paddingX__L .content
{
    padding-left:   var( --spacing-3 );
    padding-right:  var( --spacing-3 );
}

.paddingX__XL .content
{
    padding-left:   var( --spacing-4 );
    padding-right:  var( --spacing-4 );
}

.paddingX__XXL .content
{
    padding-left:   var( --spacing-5 );
    padding-right:  var( --spacing-5 );
}


/* padding Y */
.paddingY__S .content
{
    padding-top:     var( --spacing-1 );
    padding-bottom:  var( --spacing-1 );
}

.paddingY__M .content
{
    padding-top:     var( --spacing-2 );
    padding-bottom:  var( --spacing-2 );
}

.paddingY__L .content
{
    padding-top:     var( --spacing-3 );
    padding-bottom:  var( --spacing-3 );
}

.paddingY__XL .content
{
    padding-top:     var( --spacing-4 );
    padding-bottom:  var( --spacing-4 );
}

.paddingY__XXL .content
{
    padding-top:     var( --spacing-5 );
    padding-bottom:  var( --spacing-5 );
}

